# composable_kernel-dev

./: .gitignore  CMakeLists.txt  das-build.sh
build_eval_btrans/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  cppcheck-supressions  cppcheck.cmake
build_eval_btrans2/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  (+6 more)
example_hcu/ck_tile/19_grouped_gemm/: CMakeLists.txt  grouped_gemm.cpp  grouped_gemm.hpp  grouped_gemm_hip.hpp  run_grouped_gemm_example.inc
profiler/src/: CMakeLists.txt  profile_batched_gemm.cpp  profile_batched_gemm_add_relu_gemm_add.cpp  profile_batched_gemm_gemm.cpp  profile_batched_gemm_reduce.cpp  profile_batchnorm_bwd.cpp  profile_batchnorm_fwd.cpp  profile_batchnorm_infer.cpp  profile_conv_bwd_data.cpp  profile_conv_fwd.cpp  profile_conv_fwd_bias_relu.cpp  profile_conv_fwd_bias_relu_add.cpp  profile_gemm.cpp  profile_gemm_add_add_fastgelu.cpp  profile_gemm_add_fastgelu.cpp  profile_gemm_add_multiply.cpp  profile_gemm_add_relu_add_layernorm.cpp  profile_gemm_bias_add_reduce.cpp  profile_gemm_bilinear.cpp  profile_gemm_fastgelu.cpp  profile_gemm_reduce.cpp  profile_gemm_splitk.cpp  profile_grouped_conv_bwd_data.cpp  profile_grouped_conv_bwd_weight.cpp  profile_grouped_conv_fwd.cpp  profile_grouped_conv_fwd_bias_add_relu.cpp  profile_grouped_conv_fwd_bias_relu.cpp  profile_grouped_gemm.cpp  profile_grouped_gemm_fastgelu.cpp  profile_groupnorm.cpp  profile_layernorm.cpp  profile_layout_transform.cpp  profile_reduce.cpp  profile_softmax.cpp  profiler.cpp  profiler_operation_registry.hpp
test/: CMakeLists.txt
test/batched_gemm/: batched_gemm_bf16.cpp  batched_gemm_fp16.cpp  batched_gemm_fp32.cpp  batched_gemm_int8.cpp
test/batched_gemm_gemm/: test_batched_gemm_gemm_fp16.cpp  test_batched_gemm_gemm_util.hpp
test/batched_gemm_reduce/: batched_gemm_reduce_fp16.cpp
test/batched_gemm_softmax_gemm/: test_batched_gemm_softmax_gemm_fp16.cpp  test_batched_gemm_softmax_gemm_util.hpp
test/batched_gemm_softmax_gemm_permute/: test_batched_gemm_bias_softmax_gemm_permute_bf16.cpp  test_batched_gemm_bias_softmax_gemm_permute_fp16.cpp  test_batched_gemm_bias_softmax_gemm_permute_util.hpp  test_batched_gemm_softmax_gemm_permute_bf16.cpp  test_batched_gemm_softmax_gemm_permute_fp16.cpp  test_batched_gemm_softmax_gemm_permute_util.hpp
test/batchnorm/: batchnorm_bwd_rank_4.cpp  batchnorm_fwd_rank_4.cpp  batchnorm_infer_rank_4.cpp
test/block_to_ctile_map/: test_block_to_ctile_map.cpp
test/conv_util/: conv_util.cpp
test/convnd_bwd_data/: convnd_bwd_data.cpp
test/convnd_fwd/: convnd_fwd.cpp
test/data_type/: int4.cpp
test/elementwise_normalization/: test_elementwise_layernorm_fp16.cpp
test/gemm/: gemm_bf16.cpp  gemm_fp16.cpp  gemm_fp32.cpp  gemm_fp64.cpp  gemm_int8.cpp  gemm_standalone_xdl_fp16.cpp  gemm_util.hpp  run_gemm_test.inc
test/gemm/instance/: gemm_f16_nn_instance.cpp  gemm_f16_nn_instance.hpp  gemm_f16_nt_instance.cpp  gemm_f16_nt_instance.hpp  gemm_f16_tn_instance.cpp  gemm_f16_tn_instance.hpp  gemm_f16_tt_instance.cpp  gemm_f16_tt_instance.hpp  gemm_wavelet_f16_tn_instance.cpp  gemm_wavelet_f16_tn_instance.hpp
test/gemm_layernorm/: test_gemm_add_relu_add_layernorm_fp16.cpp
test/gemm_reduce/: gemm_reduce_fp16.cpp
test/gemm_split_k/: gemm_split_k.cpp
test/grouped_conv2d_bwd_data_mmac/: CMakeLists.txt  grouped_conv2d_bwd_data_mmac.cpp
test/grouped_conv2d_bwd_weight_mmac/: CMakeLists.txt  grouped_conv2d_bwd_weight_mmac.cpp
test/grouped_conv2d_fwd_mmac/: CMakeLists.txt  grouped_conv2d_fwd_mmac.cpp
test/grouped_convnd_bwd_weight/: grouped_convnd_bwd_weight.cpp
test/grouped_convnd_fwd/: grouped_convnd_fwd.cpp
test/grouped_gemm/: grouped_gemm_fp16.cpp
test/magic_number_division/: magic_number_division.cpp
test/normalization/: test_groupnorm_fp16.cpp  test_groupnorm_fp32.cpp  test_layernorm2d_fp16.cpp  test_layernorm2d_fp32.cpp
test/reduce/: reduce_no_index.cpp  reduce_with_index.cpp
test/reference_conv_fwd/: reference_conv_fwd.cpp
test/softmax/: test_softmax_interface.cpp  test_softmax_rank3.cpp  test_softmax_rank4.cpp  test_softmax_util.hpp
test/space_filling_curve/: space_filling_curve.cpp
test/wmma_op/: wmma_op.cpp  wmma_op_util.hpp
(+1694 files in other folders)
